<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DessertRecipes">

    <TextView
        android:id="@+id/recipeTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F97777"
        android:fontFamily="@font/allerta_stencil"
        android:padding="20dp"
        android:text="@string/recipetitledefault"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/recipeTitle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/currImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                tools:srcCompat="@tools:sample/backgrounds/scenic" />

            <TextView
                android:id="@+id/currDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/currdescriptionsample"
                android:textColor="#0A0A0A"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/currCalories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/sample_calories"
                android:textColor="#0A0A0A"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/currRecipe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:autoLink="web"
                android:text="@string/recipesample"
                android:textColor="#0A0A0A"
                android:textSize="18sp" />

            <Button
                android:id="@+id/backButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/back"
                android:onClick="backButtonFunction"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>